# llm-scorecaster

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  compose.yml  dump.rdb  env  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  create-github-release.yml  prevent-accidental-main-merge.yml  tag-after-merge.yml
docs/: openapi.json
docs/c4_architecture_diagrams/: c1_context.mermaid  c2_containers.mermaid  c3_components_api_gateway.mermaid  c3_components_async_worker.mermaid  c3_components_metrics_engine.mermaid
docs/user_journeys/: using_the_async_api_with_webhooks.md  using_the_asynchronous_api.md  using_the_synchronous_api.md
scripts/: generate_openapi.py
src/: main.py
src/api/auth/: dependencies.py
src/api/v1/: jobs.py  metrics_async.py  metrics_sync.py
src/celery/: celery_app.py  config.py
src/celery/tasks/: health.py  metrics.py
src/celery/utils/: webhooks.py
src/core/: computation.py  settings.py
src/core/metrics/: README.md  base.py  metric_observer.py  registry.py
src/core/metrics/implementations/: align_score.py  bert_score.py  bleu_score.py  mauve_score.py  rouge_score.py
src/core/metrics/observers/: device_metrics_observer.py  progress_tracker_observer.py
src/models/: schemas.py
src/tasks/: celery_app.py
tests/: conftest.py  test_main.py  test_utils.py
tests/api/auth/: test_dependencies.py
tests/api/v1/: test_jobs.py  test_metrics_async.py  test_metrics_sync.py
tests/celery/: test_celery_app.py  test_config.py
tests/celery/tasks/: test_health.py  test_metrics.py
tests/celery/utils/: test_webhooks.py
tests/core/metrics/: test_base.py  test_metric_observer.py  test_registry.py
tests/core/metrics/implementations/: test_bert_score.py  test_bleu_score.py  test_rouge_score.py
tests/tasks/: test_celery_app.py
util/: determine_version.py  enqueue_messages.sh  generate_changelog.py
